converted heic to jpg

--- a/proj0/index.html
+++ b/proj0/index.html
@@ -109,11 +109,11 @@
         <h2>Part 1: Selfie: The Wrong Way vs. The Right Way</h2>
         <div class="image-container">
             <div class="image-item">
-                <img src="./media/part1/IMG_5929.HEIC" alt="Close-up Portrait - Wrong Way">
+                <img src="./media/part1/IMG_5929.jpg" alt="Close-up Portrait - Wrong Way">
                 <div class="image-caption">Close-up Portrait (Wrong Way)</div>
             </div>
             <div class="image-item">
-                <img src="./media/part1/IMG_5932.HEIC" alt="Zoomed Portrait - Right Way">
+                <img src="./media/part1/IMG_5932.jpg" alt="Zoomed Portrait - Right Way">
                 <div class="image-caption">Zoomed Portrait (Right Way)</div>
             </div>
         </div>
@@ -123,11 +123,11 @@
         <h2>Part 2: Architectural Perspective Compression</h2>
         <div class="image-container">
             <div class="image-item">
-                <img src="./media/part2/IMG_5943.HEIC" alt="Compressed Perspective">
+                <img src="./media/part2/IMG_5943.jpg" alt="Compressed Perspective">
                 <div class="image-caption">Compressed Perspective (Zoomed)</div>
             </div>
             <div class="image-item">
-                <img src="./media/part2/IMG_5942.HEIC" alt="Natural Perspective">
+                <img src="./media/part2/IMG_5942.jpg" alt="Natural Perspective">
                 <div class="image-caption">Natural Perspective (Wide)</div>
             </div>
         </div>
