--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Welcome to My CS180 Portfolio!</h1>
-    <a href="./1/index.html">Project 0</a>
+    <a href="./proj0/index.html">Project 0</a>
     <a href="./1/index.html">Project 1</a>
 </body>
 </html>
