--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h1>Welcome to My CS180 Portfolio!</h1>
     <a href="./proj0/index.html">Project 0</a>
     <a href="./proj1/index.html">Project 1</a>
+    <a href="./proj2/index.html">Project 2</a>
+    <a href="./proj3/index.html">Project 3a</a>
 </body>
 </html>
