--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
         <p class="subtitle">A Journey Through Image Processing, Computational Photography, and Neural Rendering</p>
 
         <div class="project-card">
-            <h2 class="project-title">Project 0 — Image Manipulation & Warm-Up</h2>
+            <h2 class="project-title">Project 0 — Camera Geometry, Perspective, and Focal Length Effects</h2>
             <p class="project-description">
-                I implemented basic image processing operations such as color channel manipulation, filtering, and blending to build intuition for working with pixel arrays. This project established the foundation for efficient NumPy operations and vectorized image transformations.
+                I explored geometric distortion through the lens of the pinhole camera model, demonstrating how varying focal length and camera-to-subject distance affect perspective projection and perceived facial proportions. I analyzed perspective compression by capturing architectural scenes at different focal lengths to show how projection parameters influence depth scaling. Finally, I implemented a dolly zoom by synchronizing camera translation with focal length adjustments, illustrating how coordinated changes in intrinsic and extrinsic parameters alter background geometry while preserving subject size.
             </p>
             <a href="./proj0/index.html" class="project-link">View Project →</a>
         </div>
