--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
 
          <div class="project-card">
-            <h2 class="project-title">Project 1 — Image Filtering & Hybrid Images</h2>
+            <h2 class="project-title">Project 1- Color Channel Alignment (Prokudin-Gorsky Reconstruction)</h2>
             <p class="project-description">
                 I implemented both single-scale and pyramid-based alignment algorithms to register the red and green channels to the blue channel, using normalized cross-correlation and multi-resolution refinement to handle high-resolution TIFF images efficiently. To improve robustness on challenging images with exposure differences, I incorporated Sobel-based edge maps and an edge-aware scoring function that emphasized structural consistency over raw intensity. The resulting pipeline produced accurate RGB reconstructions across the full dataset, with additional tuning for difficult cases like self_portrait and emir to ensure precise color alignment.
             </p>
